--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,98 @@
-.App {
+:root {
+  --theme: #ff5cb6;
+  --black: #504C64;
+  --white: #FDFDFD;
+}
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+ 
+.container {
+  width: 80%;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px var(--black);
+  border-radius: 15px;
+}
+ 
+
+h1 {
+  color: var(--theme);
+  margin-bottom: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  color: var(--black);
+  text-align: center;
+}
+ 
+
+h3 {
+  color: var(--black);
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+ 
+form {
+  margin-bottom: 20px;
+}
+ 
+input {
+  padding: 10px;
+  margin-right: 10px;
+  width: 200px;
+  border-radius: 15px;
+  border-color: var(--theme);
+}
+ 
+button {
+  padding: 10px 16px;
+  background-color: var(--theme);
+  color: var(--white);
+  font-weight: bold;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover {
+  background-color: #bd2b7c;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ 
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+ 
+li {
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  background-color: var(--white);
+  border-radius: 8px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+ 
+button.delete {
+  background-color: var(--theme);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ 
+button.update {
+  background-color: var(--theme);
+  margin-right: 5px;
 }
