--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,7 +17,7 @@ body {
   justify-content: center;
   height: 100vh;
 }
- 
+
 .container {
   width: 80%;
   padding: 20px;
@@ -25,7 +25,6 @@ body {
   box-shadow: 0 0 10px var(--black);
   border-radius: 15px;
 }
- 
 
 h1 {
   color: var(--theme);
@@ -37,7 +36,6 @@ h2 {
   color: var(--black);
   text-align: center;
 }
- 
 
 h3 {
   color: var(--black);
@@ -45,11 +43,14 @@ h3 {
   text-align: center;
   font-size: 20px;
 }
- 
+
 form {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
- 
+
 input {
   padding: 10px;
   margin-right: 10px;
@@ -57,7 +58,11 @@ input {
   border-radius: 15px;
   border-color: var(--theme);
 }
- 
+
+input[type="password"] {
+  margin-bottom: 20px;
+}
+
 button {
   padding: 10px 16px;
   background-color: var(--theme);
@@ -71,12 +76,12 @@ button {
 button:hover {
   background-color: #bd2b7c;
 }
- 
+
 ul {
   list-style-type: none;
   padding: 0;
 }
- 
+
 li {
   margin-bottom: 20px;
   padding: 20px;
@@ -87,12 +92,29 @@ li {
   justify-content: space-between;
   align-items: center;
 }
- 
+
 button.delete {
   background-color: var(--theme);
 }
- 
+
 button.update {
   background-color: var(--theme);
   margin-right: 5px;
+}
+
+nav {
+  background-color: var(--theme);
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+nav a {
+  color: var(--white);
+  text-decoration: none;
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+.container {
+  margin-top: 20px;
 }
